@@ -262,6 +262,7 @@ static const struct token_assoc {
     {tDSTAR,			O(op)},
     {tANDDOT,			O(op)},
     {tMETHREF,			O(op)},
+    {tPIPE,			O(op)},
     {tSTRING_BEG,		O(tstring_beg)},
     {tSTRING_CONTENT,		O(tstring_content)},
     {tSTRING_DBEG,		O(embexpr_beg)},
